Service_setup_inCluster/service_graceful.yaml
apiVersion: v1
kind: Service
metadata:
  name: gracefulshutdown-demo-app-svc
  namespace: default
spec:
  ports:
  - name: http
    port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    app: gracefulshutdown-demo-app
  type: NodePort
